--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
 
 <body>
     <form action="">
-        <input type="text" name="number1">
-        <input type="text" name="operator">
-        <input type="text" name="number2">
+        <input type="text" name="number1" size="7">
+        <select name="" id="">
+            <option value="+">+</option>
+            <option value="-">-</option>
+            <option value="*">*</option>
+            <option value="/">/</option>
+        </select>
+        <input type="text" name="number2" size="7">
+        <input type="buitton" name="button" value="=">
     </form>
 
 
 
     <script src="./js/script.js"></script>
     <script>
+        // let's define fuctionn 
+        function dev() {
+            // This is Function body
+            //Every function return something
 
+        }
     </script>
 </body>
 
